--- a/style.css
+++ b/style.css
@@ -1,9 +1,34 @@
 .buy-now-button{
-    background-image: linear-gradient(to bottom,gray 0%,black 100%);
+    background-image: linear-gradient(to bottom,black 0%, black 100%);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     color:#fff;
     border: none;
     border-radius: 8px;
     padding: 9px 25px;
     cursor: pointer;
+}
+.see-all-button{
+    color: coral;
+}
+.center{
+    text-align: center;
+}
+.card-title{
+    text-align: center;
+}
+.card-text{
+    text-align: center;
+    color: grey;
+}
+.card img{
+    width: 200px;
+}
+.card{
+    border: none;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px lightgray;
+}
+.card-footer{
+    background-color: white;
+    border-top: none;
 }
